Fix progress bar sticky z-index order

--- a/css/checkout-layout-120-dev-5.css
+++ b/css/checkout-layout-120-dev-5.css
@@ -451,13 +451,15 @@ body:not(.has-checkout-must-login-notice) .fc-checkout-header ~ .woocommerce-err
       margin: 0; } }
 
 .fc-progress-bar .fc-progress-bar__inner {
-  z-index: 198;
   padding: 10px 20px;
   background-color: #fff; }
   @media (min-width: 750px) {
     .fc-progress-bar .fc-progress-bar__inner {
       padding: 10px 20px;
       border-radius: 8px; } }
+
+.fc-progress-bar[data-sticky-states].is-sticky .fc-progress-bar__inner {
+  z-index: 198; }
 
 .admin-bar .fc-progress-bar[data-sticky-states].is-sticky--top .fc-progress-bar__inner {
   transform: translateY(46px); }
